--- a/components/layout.sass
+++ b/components/layout.sass
@@ -2,8 +2,8 @@
 
 @import "~bulma/sass/utilities/functions" // Import Bulma styles
 // @import "node_modules/bulmaswatch/lux/_variables"
-@import url(https://fonts.googleapis.com/css?family=Nunito)
-$family-sans-serif: 'Nunito', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i)
+$family-sans-serif: 'Roboto', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 
 @import "~bulma/bulma"
 // @import "node_modules/bulmaswatch/lux/_overrides"
